toolbar stílusok + logo az ügyféltérbe

--- a/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
@@ -7,13 +7,13 @@
   </h6>
   <div>
     <nav>
-      <button (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+      <button (click)="vissza()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
-      <button (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+      <button (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
-      <button [disabled]="!enprojekt" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="!enprojekt" (click)="projekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Projekt
       </button>
     </nav>
