--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{dokumentumservice.cim}}</h5>
   <nav>
-    <button [disabled]="eppFrissit" (click)="feltoltes()" class="btn btn-sm btn-outline-primary navgomb">
+    <button [disabled]="eppFrissit" (click)="feltoltes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
       Feltöltés
     </button>
   </nav>
