--- a/src/app/fotozas/fotozas/fotozas.component.html
+++ b/src/app/fotozas/fotozas/fotozas.component.html
@@ -2,7 +2,7 @@
   <h5>Fotózás</h5>
   <ng-container *ngIf="!bejelentkezve">
     <p>Üdvözöljük, ön a GridSolar Group Kft. informatikai rendszerét (OSS) használja. Kérjük a fotózáshoz kapott linket kezelje bizalmasan!</p>
-    <button [disabled]="eppFrissit" (click)="folytatas()" class="btn btn-sm btn-outline-primary navgomb">
+    <button [disabled]="eppFrissit" (click)="folytatas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
       Folytatás
     </button>
   </ng-container>
