--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -5,22 +5,22 @@
   </div>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="szallito()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="szallito()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Szállító
       </button>
-      <button [disabled]="eppFrissit" (click)="nav()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="nav()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         NAV
       </button>
-      <button [disabled]="eppFrissit" (click)="smtp()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="smtp()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         SMTP
       </button>
-      <button [disabled]="eppFrissit" (click)="bizonylat()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="bizonylat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Bizonylat
       </button>
-      <button [disabled]="eppFrissit" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="projekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Projekt
       </button>
-      <button [disabled]="eppFrissit" (click)="volume()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="volume()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Volume
       </button>
     </nav>
