--- a/src/app/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt-egy/projekt-egy.component.html
@@ -7,46 +7,46 @@
   </div>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
-      <button [disabled]="eppFrissit || !mod" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod" (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod" (click)="stsz()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="stsz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Stsz
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Műszaki állapot
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="inverter()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="inverter()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Inverter
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="napelem()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="napelem()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Napelem
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="datumok()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !mod" (click)="datumok()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Dátumok
       </button>
-      <button [disabled]="eppFrissit" (click)="iratminta()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="iratminta()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Iratminta
       </button>
-      <button [disabled]="eppFrissit" (click)="bizonylatesirat()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="bizonylatesirat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Bizonylat és irat
       </button>
-      <button [disabled]="eppFrissit" (click)="szamlazasirend()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="szamlazasirend()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Számlázási rend
       </button>
-      <button [disabled]="eppFrissit" (click)="teendo()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="teendo()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Teendő
       </button>
     </nav>
