--- a/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
@@ -2,10 +2,10 @@
   <h5>{{szamlazasirendservice.cim}}</h5>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
+      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="uj()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="uj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </nav>
