--- a/src/app/vagolap/vagolap.component.html
+++ b/src/app/vagolap/vagolap.component.html
@@ -3,7 +3,7 @@
   <div>
     <nav>
       <ng-container *ngIf="vagolapservice.Mode === 1">
-        <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
+        <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
           A vágólap törlése
         </button>
       </ng-container>
