--- a/src/app/volume/volume-teszt/volume-teszt.component.html
+++ b/src/app/volume/volume-teszt/volume-teszt.component.html
@@ -2,10 +2,10 @@
   <h5>Volume ellenőrzés</h5>
   <div>
     <nav>
-      <button [disabled]="volumeservice.eppTesztel" (click)="inditas()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="volumeservice.eppTesztel" (click)="inditas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Indítás
       </button>
-      <button [disabled]="!volumeservice.eppTesztel" (click)="leallitas()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="!volumeservice.eppTesztel" (click)="leallitas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Leállítás
       </button>
     </nav>
