--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -129,7 +129,7 @@
 
   <ng-container *ngIf="bizonylatservice.SzerkesztesMode === 1">
     <nav>
-      <button [disabled]="eppFrissit" (click)="tetelUj()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="tetelUj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
     </nav>
