--- a/src/app/csoport/csoport-egy/csoport-egy.component.html
+++ b/src/app/csoport/csoport-egy/csoport-egy.component.html
@@ -3,27 +3,27 @@
   <h6 *ngIf="csoportservice.DtoSelectedIndex !== -1">{{csoportservice.Dto[csoportservice.DtoSelectedIndex].Csoport1}}</h6>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
 
       <button [disabled]="eppFrissit || csoportservice.DtoSelectedIndex === -1"
-              (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit || csoportservice.DtoSelectedIndex === -1"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
-              (click)="felhasznalo()" class="btn btn-sm btn-outline-primary navgomb">
+              (click)="felhasznalo()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Felhasználó
       </button>
       <button [disabled]="eppFrissit"
-              (click)="jog()" class="btn btn-sm btn-outline-primary navgomb">
+              (click)="jog()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Jog
       </button>
     </nav>
