--- a/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -6,19 +6,19 @@
   </div>
   <div>
     <nav>
-      <button (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+      <button (click)="vissza()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
-      <button (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+      <button (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
       </button>
-      <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="letoltes()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="letoltes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Letöltés
       </button>
-      <button [disabled]="eppFrissit" (click)="letoltesPDF()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="letoltesPDF()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         PDF
       </button>
     </nav>
