--- a/src/app/esemenynaplo/esemenynaplo.component.html
+++ b/src/app/esemenynaplo/esemenynaplo.component.html
@@ -2,7 +2,7 @@
   <h5>{{esemenynaploservice.cim}}</h5>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="onKereses()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="onKereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
     </nav>
