--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -6,7 +6,7 @@
       <textarea class="form-control" rows="3" id="regilink" readonly="true" [(ngModel)]="link"></textarea>
     </div>
   </ng-container>
-  <button [disabled]="eppFrissit" (click)="fotozaslink()" class="btn btn-sm btn-outline-primary navgomb">
+  <button [disabled]="eppFrissit" (click)="fotozaslink()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
     Új fotózás link
   </button>
   <p *ngIf="kikuldesikodidopontja !== ''">Ha új linket készít, a régi érvényessége megszűnik!</p>
