--- a/src/app/iratminta/projekt-iratminta.component.html
+++ b/src/app/iratminta/projekt-iratminta.component.html
@@ -2,28 +2,28 @@
   <h5>Iratminta</h5>
   <div style="paddig-top: 6px;padding-bottom: 6px">
     <nav>
-      <button [disabled]="eppFrissit" (click)="szerzodes()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="szerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Szerződés
       </button>
-      <button [disabled]="eppFrissit" (click)="szallitasiszerzodes()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="szallitasiszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Szállítási szerződés
       </button>
-      <button [disabled]="eppFrissit" (click)="feltetelesszerzodes()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="feltetelesszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Feltételes szerződés
       </button>
-      <button [disabled]="eppFrissit" (click)="munkalap()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="munkalap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Munkalap
       </button>
-      <button [disabled]="eppFrissit" (click)="elegedettseg()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="elegedettseg()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Elégedettségi felmérés
       </button>
-      <button [disabled]="eppFrissit" (click)="elmuemasz()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="elmuemasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         ELMŰ-ÉMÁSZ készrejelentés
       </button>
-      <button [disabled]="eppFrissit" (click)="eon()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="eon()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         E.ON készrejelentés
       </button>
-      <button [disabled]="eppFrissit" (click)="demasz()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="demasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         NKM készrejelentés
       </button>
     </nav>
