--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -2,19 +2,19 @@
   <h5>{{projektkapcsolatservice.cim}}</h5>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary navgomb" style="margin-right: 3px">
+      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || !BizonylatMod" (click)="ujbizonylat()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !BizonylatMod" (click)="ujbizonylat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Bizonylat
       </button>
-      <button [disabled]="eppFrissit || !IratMod" (click)="ujirat()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !IratMod" (click)="ujirat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Irat
       </button>
-      <button [disabled]="eppFrissit || !AjanlatMod" (click)="ujajanlat()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit || !AjanlatMod" (click)="ujajanlat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Ajánlat
       </button>
-      <button [disabled]="eppFrissit" (click)="vagolaprol()" class="btn btn-sm btn-outline-primary navgomb">
+      <button [disabled]="eppFrissit" (click)="vagolaprol()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>Vágólapról
       </button>
     </nav>
