újabbak a startupban ++ 1 + bizonylatkifizetés -> kifizetés

--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -98,7 +98,7 @@
   </ng-container>
   <ng-container *ngIf="bizonylatservice.EgyMode === 3">
     <div [@rowanimation]>
-      <app-bizonylat-kifizetes-container></app-bizonylat-kifizetes-container>
+      <app-kifizetes-container></app-kifizetes-container>
     </div>
   </ng-container>
   <ng-container *ngIf="bizonylatservice.EgyMode === 4">
