--- a/src/app/volume/volume-list/volume-list.component.html
+++ b/src/app/volume/volume-list/volume-list.component.html
@@ -1,27 +1,10 @@
 <div class="alapkeret">
   <h5>{{volumeservice.cim}}</h5>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>No</th>
-      <th>Max. méret</th>
-      <th>Jelenlegi méret</th>
-      <th>Állapot</th>
-      <th>Az állapot kelte</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of volumeservice.Dto; let i = index">
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Volumekod}}</td>
-      <td>{{item.Volumeno}}</td>
-      <td>{{item.Maxmeret}}</td>
-      <td>{{item.Jelenlegimeret}}</td>
-      <td>{{item.Allapot}}</td>
-      <td>{{item.Allapotkelte | datetimehun}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-tabla [items]="volumeservice.Dto"
+             [colsets]="volumeservice.GridSettings"
+             [(selectedrow)]="ti"
+             (forid)="setClickedRow($event)">
+  </app-tabla>
 
   <app-errormodal [cim]="volumeservice.cim"></app-errormodal>
   <app-spinner *ngIf="eppFrissit"></app-spinner>
