--- a/src/app/kifizetes/kifizetes-egy/kifizetes-egy.component.html
+++ b/src/app/kifizetes/kifizetes-egy/kifizetes-egy.component.html
@@ -26,7 +26,7 @@
     </nav>
   </div>
 
-  <!--  export enum BizonylatKifizetesEgyMode {
+  <!--  export eKifizetesEgyModeMode {
 Reszletek = 1,
 Torles = 2,
 Modositas = 3
@@ -52,7 +52,7 @@ Modositas = 3
   </ng-container>
   <ng-container *ngIf="bizonylatkifizetesservice.EgyMode === 3">
     <div [@rowanimation]>
-      <app-bizonylat-kifizetes-szerkesztes></app-bizonylat-kifizetes-szerkesztes>
+      <app-kifizetes-szerkesztes></app-kifizetes-szerkesztes>
     </div>
   </ng-container>
 
