--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,10 @@
 <div style="margin-left: 5%;margin-right: 5%;width: auto;">
   <router-outlet></router-outlet>
 </div>
+
 <button id="GoTopBtn" (click)="onFel()">
   <i class="fa fa-arrow-up" aria-hidden="true"></i>
 </button>
+
 <app-errorbox></app-errorbox>
+<app-gspinner></app-gspinner>
